--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,14 @@ if (keyPropsFile.exists()) {
 }
 
 android {
-    compileSdk 33
-
+    namespace 'me.ash.reader'
+    compileSdk 34
     defaultConfig {
         applicationId "me.ash.reader"
         minSdk 26
-        targetSdk 33
-        versionCode 19
-        versionName "0.9.8"
+        targetSdk 34
+        versionCode 20231214
+        versionName "2023.12.14"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -39,7 +39,7 @@ android {
         }
     }
 
-    flavorDimensions "channel"
+    flavorDimensions.add("channel")
     productFlavors {
         fdroid {
             dimension "channel"
@@ -64,9 +64,9 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    applicationVariants.all { variant ->
+    applicationVariants.configureEach { variant ->
         variant.outputs.each { output ->
-            output.outputFileName = "ReadYou-${defaultConfig.versionName}-${gitCommitHash}.apk"
+            output.outputFileName = "RapidReader - Tin Tức Nhanh Chóng-${defaultConfig.versionName}-${gitCommitHash}.apk"
         }
     }
     kotlinOptions {
@@ -90,30 +90,23 @@ android {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
-    namespace 'me.ash.reader'
 }
 
 dependencies {
     implementation "com.github.ireward:compose-html:1.0.2"
-
     // http://bigbadaboom.github.io/androidsvg/release_notes.html
     implementation "com.caverock:androidsvg-aar:$androidSVG"
-
     // https://github.com/mdewilde/opml-parser
     implementation "be.ceau:opml-parser:$opmlParser"
-
     // https://github.com/dankito/Readability4J
     implementation "net.dankito.readability4j:readability4j:$readability4j"
-
     // https://mvnrepository.com/artifact/com.rometools/rome
     implementation "com.rometools:rome:$rome"
-
     // https://coil-kt.github.io/coil/changelog/
     implementation("io.coil-kt:coil-base:$coil")
     implementation("io.coil-kt:coil-compose:$coil")
     implementation("io.coil-kt:coil-svg:$coil")
     implementation("io.coil-kt:coil-gif:$coil")
-
     // Cancel TLSv1.3 support pre Android10
     // implementation 'org.conscrypt:conscrypt-android:2.5.2'
 
@@ -122,40 +115,30 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-coroutines-jvm:$okhttp"
     implementation "com.squareup.retrofit2:retrofit:$retrofit2"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2"
-
     // https://developer.android.com/jetpack/androidx/releases/profileinstaller
     implementation "androidx.profileinstaller:profileinstaller:$profileinstaller"
-
     // https://developer.android.com/jetpack/androidx/releases/work
     implementation "androidx.work:work-runtime-ktx:$work"
-
     // https://developer.android.com/jetpack/androidx/releases/datastore
     implementation "androidx.datastore:datastore-preferences:$datastore"
-
     // https://developer.android.com/jetpack/androidx/releases/room
     implementation "androidx.room:room-paging:$room"
     implementation "androidx.room:room-common:$room"
     implementation "androidx.room:room-ktx:$room"
     kapt "androidx.room:room-compiler:$room"
-
     // https://developer.android.com/jetpack/androidx/releases/paging
     implementation "androidx.paging:paging-common:$paging"
     implementation "androidx.paging:paging-runtime:$paging"
     implementation "androidx.paging:paging-compose:1.0.0-alpha14"
-
     // https://developer.android.com/jetpack/androidx/releases/paging
     implementation "androidx.browser:browser:1.5.0"
-
     // https://developer.android.com/jetpack/androidx/releases/navigation
     implementation "androidx.navigation:navigation-compose:$navigation"
-
     // https://developer.android.com/jetpack/androidx/releases/lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle"
-
     // https://developer.android.com/jetpack/androidx/releases/compose-material3
     implementation "androidx.compose.material3:material3:$material3"
-
     // https://github.com/google/accompanist/releases
     implementation "com.google.accompanist:accompanist-insets:$accompanist"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist"
@@ -163,7 +146,6 @@ dependencies {
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist"
     implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist"
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist"
-
     // https://developer.android.com/jetpack/androidx/releases/compose-animation
     implementation "androidx.compose.animation:animation-graphics:$compose"
     // https://developer.android.com/jetpack/androidx/releases/compose-ui
@@ -175,7 +157,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose"
-
     // hilt
     implementation "androidx.hilt:hilt-work:1.0.0"
     implementation "com.google.dagger:hilt-android:2.40.5"
@@ -183,12 +164,10 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-
     // android
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.activity:activity-compose:1.4.0"
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-
 }
