--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         profileinstaller = '1.2.0-beta02'
         // https://square.github.io/okhttp/changelogs/changelog/
 //        okhttp = '5.0.0-alpha.7'
-        retrofit2 = '2.9.0'
+//        retrofit2 = '2.9.0'
         // https://coil-kt.github.io/coil/changelog/
 //        coil = '2.1.0'
         // https://mvnrepository.com/artifact/com.rometools/rome
