--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,11 +116,11 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // https://developer.android.com/jetpack/androidx/releases/profileinstaller
-    implementation "androidx.profileinstaller:profileinstaller:$profileinstaller"
+    implementation "androidx.profileinstaller:profileinstaller:1.2.0-beta02"
     // https://developer.android.com/jetpack/androidx/releases/work
-    implementation "androidx.work:work-runtime-ktx:$work"
+    implementation "androidx.work:work-runtime-ktx:2.8.0-alpha02"
     // https://developer.android.com/jetpack/androidx/releases/datastore
-    implementation "androidx.datastore:datastore-preferences:$datastore"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     // https://developer.android.com/jetpack/androidx/releases/room
     implementation "androidx.room:room-paging:$room"
     implementation "androidx.room:room-common:$room"
