--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,7 +116,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // https://developer.android.com/jetpack/androidx/releases/profileinstaller
-    implementation "androidx.profileinstaller:profileinstaller:1.2.0-beta02"
+    implementation "androidx.profileinstaller:profileinstaller:1.3.1"
     // https://developer.android.com/jetpack/androidx/releases/work
     implementation "androidx.work:work-runtime-ktx:2.8.0-alpha02"
     // https://developer.android.com/jetpack/androidx/releases/datastore
