--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,21 +122,21 @@ dependencies {
     // https://developer.android.com/jetpack/androidx/releases/datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     // https://developer.android.com/jetpack/androidx/releases/room
-    implementation "androidx.room:room-paging:$room"
-    implementation "androidx.room:room-common:$room"
-    implementation "androidx.room:room-ktx:$room"
-    kapt "androidx.room:room-compiler:$room"
+    implementation "androidx.room:room-paging:2.5.0-alpha01"
+    implementation "androidx.room:room-common:2.5.0-alpha01"
+    implementation "androidx.room:room-ktx:2.5.0-alpha01"
+    kapt "androidx.room:room-compiler:2.5.0-alpha01"
     // https://developer.android.com/jetpack/androidx/releases/paging
-    implementation "androidx.paging:paging-common:$paging"
-    implementation "androidx.paging:paging-runtime:$paging"
+    implementation "androidx.paging:paging-common:3.1.1"
+    implementation "androidx.paging:paging-runtime:3.1.1"
     implementation "androidx.paging:paging-compose:1.0.0-alpha14"
     // https://developer.android.com/jetpack/androidx/releases/paging
     implementation "androidx.browser:browser:1.5.0"
     // https://developer.android.com/jetpack/androidx/releases/navigation
-    implementation "androidx.navigation:navigation-compose:$navigation"
+    implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
     // https://developer.android.com/jetpack/androidx/releases/lifecycle
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
     // https://developer.android.com/jetpack/androidx/releases/compose-material3
     implementation "androidx.compose.material3:material3:$material3"
     // https://github.com/google/accompanist/releases
