--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
         // https://developer.android.com/jetpack/androidx/releases/compose-ui
-        compose = '1.2.0-beta02'
+//        compose = '1.2.0-beta02'
         // https://github.com/google/accompanist/releases
-        accompanist = '0.24.7-alpha'
+//        accompanist = '0.24.7-alpha'
         // https://developer.android.com/jetpack/androidx/releases/compose-material3
-        material3 = '1.0.1'
+//        material3 = '1.0.1'
         // https://developer.android.com/jetpack/androidx/releases/lifecycle
 //        lifecycle = '2.5.0-rc01'
         // https://developer.android.com/jetpack/androidx/releases/navigation
