--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose
+        kotlinCompilerExtensionVersion '1.2.0-beta02'
     }
     packagingOptions {
         resources {
@@ -138,25 +138,25 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
     // https://developer.android.com/jetpack/androidx/releases/compose-material3
-    implementation "androidx.compose.material3:material3:$material3"
+    implementation "androidx.compose.material3:material3:1.0.1"
     // https://github.com/google/accompanist/releases
-    implementation "com.google.accompanist:accompanist-insets:$accompanist"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist"
-    implementation "com.google.accompanist:accompanist-pager:$accompanist"
-    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist"
-    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist"
-    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist"
+    implementation "com.google.accompanist:accompanist-insets:0.24.7-alpha"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.7-alpha"
+    implementation "com.google.accompanist:accompanist-pager:0.24.7-alpha"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.24.7-alpha"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.7-alpha"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha"
     // https://developer.android.com/jetpack/androidx/releases/compose-animation
-    implementation "androidx.compose.animation:animation-graphics:$compose"
+    implementation "androidx.compose.animation:animation-graphics:1.2.0-beta02"
     // https://developer.android.com/jetpack/androidx/releases/compose-ui
-    implementation "androidx.compose.ui:ui:$compose"
-    implementation "androidx.compose.ui:ui-util:$compose"
+    implementation "androidx.compose.ui:ui:1.2.0-beta02"
+    implementation "androidx.compose.ui:ui-util:1.2.0-beta02"
     // https://developer.android.com/jetpack/androidx/releases/compose-material
-    implementation "androidx.compose.material:material:$compose"
-    implementation "androidx.compose.material:material-icons-extended:$compose"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose"
+    implementation "androidx.compose.material:material:1.2.0-beta02"
+    implementation "androidx.compose.material:material-icons-extended:1.2.0-beta02"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.2.0-beta02"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.0-beta02"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.0-beta02"
     // hilt
     implementation "androidx.hilt:hilt-work:1.0.0"
     implementation "com.google.dagger:hilt-android:2.40.5"
