--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,9 +154,9 @@ dependencies {
     // https://developer.android.com/jetpack/androidx/releases/compose-material
     implementation "androidx.compose.material:material:1.2.0-beta02"
     implementation "androidx.compose.material:material-icons-extended:1.2.0-beta02"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.0-beta02"
+//    debugImplementation "androidx.compose.ui:ui-tooling:1.2.0-beta02"
     implementation "androidx.compose.ui:ui-tooling-preview:1.2.0-beta02"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.0-beta02"
+//    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.0-beta02"
     // hilt
     implementation "androidx.hilt:hilt-work:1.0.0"
     implementation "com.google.dagger:hilt-android:2.40.5"
