--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,7 +167,7 @@ dependencies {
     // android
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.activity:activity-compose:1.4.0"
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+//    testImplementation "junit:junit:4.13.2"
+//    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+//    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 }
