--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
     }
     applicationVariants.configureEach { variant ->
         variant.outputs.each { output ->
-            output.outputFileName = "RapidReader - Tin Tức Nhanh Chóng-${defaultConfig.versionName}-${gitCommitHash}.apk"
+            output.outputFileName = "RSS Cat Hub-${defaultConfig.versionName}-${gitCommitHash}.apk"
         }
     }
     kotlinOptions {
