--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,55 +93,54 @@ android {
 }
 
 dependencies {
-    implementation "com.github.ireward:compose-html:1.0.2"
-    implementation "com.caverock:androidsvg-aar:$androidSVG"
-    implementation "be.ceau:opml-parser:$opmlParser"
-    implementation "net.dankito.readability4j:readability4j:$readability4j"
-    implementation "com.rometools:rome:$rome"
-    implementation("io.coil-kt:coil-base:2.1.0")
-    implementation("io.coil-kt:coil-compose:2.1.0")
-    implementation("io.coil-kt:coil-svg:2.1.0")
-    implementation("io.coil-kt:coil-gif:2.1.0")
-    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.7"
-    implementation "com.squareup.okhttp3:okhttp-coroutines-jvm:5.0.0-alpha.11"
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "androidx.profileinstaller:profileinstaller:1.3.1"
-    implementation "androidx.work:work-runtime-ktx:2.8.0-alpha02"
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-
-    implementation "androidx.room:room-paging:2.5.0-alpha01"
-    implementation "androidx.room:room-common:2.5.0-alpha01"
-    implementation "androidx.room:room-ktx:2.5.0-alpha01"
+    api "com.github.ireward:compose-html:1.0.2"
+    api "com.caverock:androidsvg-aar:$androidSVG"
+    api "be.ceau:opml-parser:$opmlParser"
+    api "net.dankito.readability4j:readability4j:$readability4j"
+    api "com.rometools:rome:$rome"
+    api("io.coil-kt:coil-base:2.1.0")
+    api("io.coil-kt:coil-compose:2.1.0")
+    api("io.coil-kt:coil-svg:2.1.0")
+    api("io.coil-kt:coil-gif:2.1.0")
+    api "com.squareup.okhttp3:okhttp:5.0.0-alpha.7"
+    api "com.squareup.okhttp3:okhttp-coroutines-jvm:5.0.0-alpha.11"
+    api "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:converter-gson:2.9.0"
+    api "androidx.profileinstaller:profileinstaller:1.3.1"
+    api "androidx.work:work-runtime-ktx:2.8.0-alpha02"
+    api "androidx.datastore:datastore-preferences:1.0.0"
+    api "androidx.room:room-paging:2.5.0-alpha01"
+    api "androidx.room:room-common:2.5.0-alpha01"
+    api "androidx.room:room-ktx:2.5.0-alpha01"
     kapt "androidx.room:room-compiler:2.5.0-alpha01"
-    implementation "androidx.paging:paging-common:3.1.1"
-    implementation "androidx.paging:paging-runtime:3.1.1"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha14"
-    implementation "androidx.browser:browser:1.8.0"
-    implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
-    implementation "androidx.compose.material3:material3:1.0.1"
-    implementation "com.google.accompanist:accompanist-insets:0.24.7-alpha"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.7-alpha"
-    implementation "com.google.accompanist:accompanist-pager:0.24.7-alpha"
-    implementation "com.google.accompanist:accompanist-flowlayout:0.24.7-alpha"
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.7-alpha"
-    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha"
-    implementation "androidx.compose.animation:animation-graphics:1.2.0-beta02"
-    implementation "androidx.compose.ui:ui:1.2.0-beta02"
-    implementation "androidx.compose.ui:ui-util:1.2.0-beta02"
-    implementation "androidx.compose.material:material:1.2.0-beta02"
-    implementation "androidx.compose.material:material-icons-extended:1.2.0-beta02"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.0-beta02"
-    implementation "androidx.hilt:hilt-work:1.0.0"
-    implementation "com.google.dagger:hilt-android:2.40.5"
+    api "androidx.paging:paging-common:3.1.1"
+    api "androidx.paging:paging-runtime:3.1.1"
+    api "androidx.paging:paging-compose:1.0.0-alpha14"
+    api "androidx.browser:browser:1.8.0"
+    api "androidx.navigation:navigation-compose:2.5.0-rc01"
+    api "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
+    api "androidx.compose.material3:material3:1.0.1"
+    api "com.google.accompanist:accompanist-insets:0.24.7-alpha"
+    api "com.google.accompanist:accompanist-systemuicontroller:0.24.7-alpha"
+    api "com.google.accompanist:accompanist-pager:0.24.7-alpha"
+    api "com.google.accompanist:accompanist-flowlayout:0.24.7-alpha"
+    api "com.google.accompanist:accompanist-navigation-animation:0.24.7-alpha"
+    api "com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha"
+    api "androidx.compose.animation:animation-graphics:1.2.0-beta02"
+    api "androidx.compose.ui:ui:1.2.0-beta02"
+    api "androidx.compose.ui:ui-util:1.2.0-beta02"
+    api "androidx.compose.material:material:1.2.0-beta02"
+    api "androidx.compose.material:material-icons-extended:1.2.0-beta02"
+    api "androidx.compose.ui:ui-tooling-preview:1.2.0-beta02"
+    api "androidx.hilt:hilt-work:1.0.0"
+    api "com.google.dagger:hilt-android:2.40.5"
     kapt "com.google.dagger:hilt-android-compiler:2.40.5"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    api "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "androidx.activity:activity-compose:1.4.0"
+    api "androidx.hilt:hilt-navigation-compose:1.0.0"
+    api "androidx.core:core-ktx:1.7.0"
+    api "androidx.activity:activity-compose:1.4.0"
 //    testImplementation "junit:junit:4.13.2"
 //    androidTestImplementation "androidx.test.ext:junit:1.1.5"
 //    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
