--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.mckimquyen.reader"
         minSdk 26
         targetSdk 34
-        versionCode 20241207
-        versionName "2024.12.07"
+        versionCode 20241214
+        versionName "2024.12.14"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -97,6 +97,7 @@ android {
 }
 
 dependencies {
+//    api "androidx.compose.compiler:compiler:1.3.0"
     api "com.github.ireward:compose-html:1.0.2"
     api "com.caverock:androidsvg-aar:$androidSVG"
     api "be.ceau:opml-parser:$opmlParser"
