--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
     defaultConfig {
         applicationId "com.mckimquyen.reader"
         minSdk 26
+        //noinspection OldTargetApi
         targetSdk 34
         versionCode 20241214
         versionName "2024.12.14"
@@ -99,7 +100,7 @@ android {
 dependencies {
 //    api "androidx.compose.compiler:compiler:1.5.15"
     api "com.github.ireward:compose-html:1.0.2"
-    api "com.caverock:androidsvg-aar:$androidSVG"
+//    api "com.caverock:androidsvg-aar:$androidSVG"
     api "be.ceau:opml-parser:$opmlParser"
     api "net.dankito.readability4j:readability4j:$readability4j"
     api "com.rometools:rome:$rome"
