--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,7 +102,7 @@ dependencies {
     api "com.github.ireward:compose-html:1.0.2"
 //    api "com.caverock:androidsvg-aar:$androidSVG"
 //    api "be.ceau:opml-parser:$opmlParser"
-    api "net.dankito.readability4j:readability4j:$readability4j"
+//    api "net.dankito.readability4j:readability4j:$readability4j"
     api "com.rometools:rome:$rome"
     api("io.coil-kt:coil-base:2.1.0")
     api("io.coil-kt:coil-compose:2.1.0")
