--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,7 @@ dependencies {
     api "com.squareup.okhttp3:okhttp-coroutines-jvm:5.0.0-alpha.11"
     api "com.squareup.retrofit2:retrofit:2.9.0"
     api "com.squareup.retrofit2:converter-gson:2.9.0"
-    api "androidx.profileinstaller:profileinstaller:1.3.1"
+//    api "androidx.profileinstaller:profileinstaller:1.3.1"
     api "androidx.work:work-runtime-ktx:2.8.0-alpha02"
     api "androidx.datastore:datastore-preferences:1.0.0"
     api "androidx.room:room-paging:2.5.0-alpha01"
