--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,9 +100,9 @@ android {
 dependencies {
 //    api "androidx.compose.compiler:compiler:1.5.15"
     api "com.github.ireward:compose-html:1.0.2"
-//    api "com.caverock:androidsvg-aar:$androidSVG"
-//    api "be.ceau:opml-parser:$opmlParser"
-//    api "net.dankito.readability4j:readability4j:$readability4j"
+    api "com.caverock:androidsvg-aar:$androidSVG"
+    api "be.ceau:opml-parser:$opmlParser"
+    api "net.dankito.readability4j:readability4j:$readability4j"
     api "com.rometools:rome:$rome"
     api("io.coil-kt:coil-base:2.1.0")
     api("io.coil-kt:coil-compose:2.1.0")
@@ -113,13 +113,15 @@ dependencies {
     api "com.squareup.okhttp3:okhttp-coroutines-jvm:5.0.0-alpha.11"
     api "com.squareup.retrofit2:retrofit:2.9.0"
     api "com.squareup.retrofit2:converter-gson:2.9.0"
-//    api "androidx.profileinstaller:profileinstaller:1.3.1"
+    api "androidx.profileinstaller:profileinstaller:1.3.1"
     api "androidx.work:work-runtime-ktx:2.8.0-alpha02"
     api "androidx.datastore:datastore-preferences:1.0.0"
-    api "androidx.room:room-paging:2.5.0-alpha01"
-    api "androidx.room:room-common:2.5.0-alpha01"
-    api "androidx.room:room-ktx:2.5.0-alpha01"
-    kapt "androidx.room:room-compiler:2.5.0-alpha01"
+
+    api "androidx.room:room-paging:2.5.0"
+    api "androidx.room:room-common:2.5.0"
+    api "androidx.room:room-ktx:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+
     api "androidx.paging:paging-common:3.1.1"
     api "androidx.paging:paging-runtime:3.1.1"
     api "androidx.paging:paging-compose:1.0.0-alpha14"
