--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,7 @@ dependencies {
 
     api "androidx.navigation:navigation-compose:2.5.0-rc01"
     api "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
-    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
+//    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
 
     api "androidx.compose.material3:material3:1.0.1"
     api "com.google.accompanist:accompanist-insets:0.24.7-alpha"
