--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,7 +129,7 @@ dependencies {
     api "androidx.browser:browser:1.8.0"
 
     api "androidx.navigation:navigation-compose:2.5.0-rc01"
-    api "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
+//    api "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
 //    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
 
     api "androidx.compose.material3:material3:1.0.1"
