--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,7 +133,7 @@ dependencies {
 //    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
 
     api "androidx.compose.material3:material3:1.0.1"
-    api "com.google.accompanist:accompanist-insets:0.24.7-alpha"
+//    api "com.google.accompanist:accompanist-insets:0.24.7-alpha"
     api "com.google.accompanist:accompanist-systemuicontroller:0.24.7-alpha"
     api "com.google.accompanist:accompanist-pager:0.24.7-alpha"
     api "com.google.accompanist:accompanist-flowlayout:0.24.7-alpha"
