--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,7 +141,7 @@ dependencies {
     api "com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha"
 
 //    api "androidx.compose.animation:animation-graphics:1.2.0-beta02"
-    api "androidx.compose.ui:ui:1.2.0-beta02"
+//    api "androidx.compose.ui:ui:1.2.0-beta02"
     api "androidx.compose.ui:ui-util:1.2.0-beta02"
     api "androidx.compose.material:material:1.2.0-beta02"
     api "androidx.compose.material:material-icons-extended:1.2.0-beta02"
