--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,4 +159,6 @@ dependencies {
 //    androidTestImplementation "androidx.test.ext:junit:1.1.5"
 //    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
     debugImplementation("com.squareup.leakcanary:leakcanary-android:2.14")
+    implementation("com.google.android.play:review:2.0.1")
+    implementation("com.google.android.play:review-ktx:2.0.1")
 }
